<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Welcome"
    android:background="@drawable/bg"
    tools:ignore="MissingConstraints"
    tools:layout_editor_absoluteX="30dp"
    tools:layout_editor_absoluteY="89dp">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="286dp"
            android:layout_height="286dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.254"
            app:srcCompat="@drawable/artificiallogo" />


        <Button
            android:id="@+id/btnGuest"
            android:layout_width="136dp"
            android:layout_height="73dp"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="60dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/guest_str"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.832" />

        <Button
            android:id="@+id/btnAdmin"
            android:layout_width="136dp"
            android:layout_height="73dp"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/admin_str"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.88"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.832" />



        <TextView
            android:id="@+id/txtWelcome"
            android:layout_width="286dp"
            android:layout_height="41dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/welcome_to_limbcare_str"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="26dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.041" />

</android.support.constraint.ConstraintLayout>